--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@babel/core": "^7.20.12",
+    "@babel/generator": "^7.20.7",
+    "@babel/parser": "^7.20.7",
+    "@babel/traverse": "^7.20.12",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.11.0",
@@ -18,8 +22,11 @@
     "eslint-config-next": "13.1.1",
     "next": "13.1.1",
     "octokit": "^2.0.11",
+    "octokit-plugin-create-pull-request": "^4.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "swr": "^2.0.0"
+    "swr": "^2.0.0",
+    "ts-morph": "^17.0.1",
+    "typescript": "^4.9.4"
   }
 }
