--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "@next/font": "13.1.1",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.1",
+    "moment": "^2.29.4",
     "next": "13.1.1",
     "octokit": "^2.0.11",
     "octokit-plugin-create-pull-request": "^4.1.0",
+    "random-words": "^1.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-editext": "^5.1.0",
