--- a/.github/workflows/push-translation.yml
+++ b/.github/workflows/push-translation.yml
@@ -3,8 +3,7 @@ name: Create Pull Request
 on:
   push:
     branches:
-      - main
-
+      - dev
 jobs:
   copy-file:
     runs-on: ubuntu-latest
@@ -12,7 +11,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Pushes test file
+      - name: Pushes Translate file
         uses: dmnemec/copy_file_to_another_repo_action@main
         env:
           API_TOKEN_GITHUB: ${{ secrets.MY_PAT }}
