--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.3",
     "@next/font": "13.1.1",
+    "axios": "^1.2.6",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.1",
     "moment": "^2.29.4",
     "next": "13.1.1",
-    "octokit": "^2.0.11",
+    "next-auth": "^4.19.0",
+    "octokit": "^2.0.14",
     "octokit-plugin-create-pull-request": "^4.1.0",
     "random-words": "^1.2.1",
     "react": "18.2.0",
