--- a/.github/workflows/push-translation.yml
+++ b/.github/workflows/push-translation.yml
@@ -1,4 +1,4 @@
-name: Update Translation Files
+name: Update translations
 
 on:
   push:
@@ -6,58 +6,47 @@ on:
       - feat/push-translation
 
 env:
-  GITHUB_TOKEN: ${{ secrets.ACTIONS_GITHUB_TOKEN }}
+  GITHUB_TOKEN: ${{ secrets.ACTION_GITHUB_TOKEN }}
 
 jobs:
   update-translations:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout source repository
-        uses: actions/checkout@v2
-
-      - name: Clone target repository
+      - name: Checkout target repository
         uses: actions/checkout@v2
         with:
           ref: main
           repository: kyllolive/octokit-demo
           token: ${{ env.GITHUB_TOKEN }}
 
-      - name: Create branch
-        run: |
-          git checkout -b update-translations
-          git config user.email "action@github.com"
-          git config user.name "GitHub Action"
-
-      - name: List contents of source translations directory
-        run: |
-          echo "Contents of source translations directory:"
-          ls ../nextjs-octokit-demo/src/
+      - name: Checkout source repository
+        uses: actions/checkout@v2
+        with:
+          repository: kyllolive/nextjs-octokit-demo
+          token: ${{ env.GITHUB_TOKEN }}
+          ref: main
+          path: ../nextjs-octokit-demo
 
       - name: Update translations folder
         run: |
           rm -rf src/translations
           cp -r ../nextjs-octokit-demo/src/translations src/
 
-      - name: Commit changes
+      - name: Create branch
         run: |
+          git config --global user.email "actions@github.com"
+          git config --global user.name "GitHub Actions"
+          git checkout -b update-translations
           git add src/translations
           git commit -m "Update translations folder"
-
-      - name: Push changes
-        uses: ad-m/github-push-action@v0.6.0
-        with:
-          branch: update-translations
-          token: ${{ env.GITHUB_TOKEN }}
+          git push -u origin update-translations
 
       - name: Create pull request
         uses: peter-evans/create-pull-request@v2
         with:
-          commit-message: Update translations folder
-          title: Update translations folder
-          body: |
-            This pull request updates the translations folder in the target repository.
-
-          labels: update, translations
-          reviewers: kyllolive@gmail.com
+          title: "Update translations folder"
+          body: "This pull request updates the translations folder with the latest changes."
+          head: update-translations
+          base: main
           token: ${{ env.GITHUB_TOKEN }}
