--- a/.github/workflows/push-translation.yml
+++ b/.github/workflows/push-translation.yml
@@ -3,7 +3,7 @@ name: CI
 on:
   push:
     branches:
-      - feat/push-translations
+      - feat/push-translation
 
 jobs:
   update_translations:
