--- a/.github/workflows/push-translation.yml
+++ b/.github/workflows/push-translation.yml
@@ -39,11 +39,11 @@ jobs:
           rm -rf src/translations
           cp -r ../nextjs-octokit-demo/src/translations src/
 
-      - name: Set up Git
-        run: |
-          cd octokit-demo
-          git config --global user.email "actions@github.com"
-          git config --global user.name "GitHub Actions"
+      # - name: Set up Git
+      #   run: |
+      #     cd octokit-demo
+      #     git config --global user.email "actions@github.com"
+      #     git config --global user.name "GitHub Actions"
 
       - name: Create branch
         run: |
@@ -52,7 +52,7 @@ jobs:
           git remote add origin https://github.com/kyllolive/octokit-demo.git
           git config --global user.email "actions@github.com"
           git config --global user.name "GitHub Actions"
-          git checkout -b update-translations
+          git checkout -b update-translations-1
           git add src/translations
           git commit -m "Update translations folder"
           git push
