--- a/.github/workflows/push-translation.yml
+++ b/.github/workflows/push-translation.yml
@@ -53,8 +53,7 @@ jobs:
           git remote add origin https://github.com/kyllolive/octokit-demo.git
           git config --global user.email "actions@github.com"
           git config --global user.name "GitHub Actions"
-          git checkout -b update-translations || git checkout update-translations
-          git pull origin update-translations
+          git checkout -b update-translations 
           git add src/translations
           git commit -m "Update translations folder"
           git push --set-upstream origin update-translations
